k8s/environment/production/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lenra
spec:
  routes:
    - kind: Rule
      match: Host(`app.lenra.io`, `dev.lenra.io`) && PathPrefix(`/api`, `/auth`, `/socket`, `/runner`)
      services:
        - kind: Service
          name: lenra-server
          port: 4000
    - kind: Rule
      match: Host(`app.lenra.io`, `dev.lenra.io`)
      services:
        - kind: Service
          name: lenra-client
          port: 8080
    - kind: Rule
      match: Host(`doc.lenra.io`)
      services:
        - kind: Service
          name: lenra-documentation
          port: 8080
